--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Loving timer</title>
+    <title>love forever</title>
     <script type="text/javascript" src="static/jquery.min.js"></script>
     <script type="text/javascript" src="static/TimeCircles.js"></script>
     <link rel="stylesheet" href="static/bootstrap.min.css">
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="content">
             <h2> 图图 💓 露露</h2>    
-            <h3><center>LOVE BEGINS 2019-04-24 22:20:20✨ CHERISH EVERY DAY😘</center></h3>
+            <h3><center>LOVE BEGINS 2019-04-24 22:20:20✨ CHERISH EVERY DAY😘</center></h3>
             <div id="DateCountdown" data-date="2019-04-24 22:20:20"></div>  
             <h4><center>从见到你的第一眼，我就知道是永远！</center></h4>
         </div>
